--- a/video-page.html
+++ b/video-page.html
@@ -190,7 +190,7 @@
                             <div class="single-video-left">
                                 <div class="single-video">
                                     <!-- <iframe width="100%" height="315" src="https://www.youtube-nocookie.com/embed/8LWZSGNjuF0?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe> -->
-                                    <video class="video-js vjs-big-play-centered" controls preload="auto" width="720" height="315" poster="roshan.jpg" data-setup="{}">
+                                    <video class="video-js vjs-big-play-centered" controls preload="auto" width="720%" height="315%" poster="roshan.jpg" data-setup="{}">
                                        <source src="https://player.vimeo.com/external/402526035.hd.mp4?s=1e797c837740d4089bbc4754efd966d38e1140cf&profile_id=174" type="video/mp4" />
                                        <source src="MY_VIDEO.webm" type="video/webm" />
                                        <p class="vjs-no-js">
